--- a/glantz.css
+++ b/glantz.css
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="glantz.css">
 body {
-    background color: lightblue;
-         }
+  background-color: lightblue;
+}
+
