--- a/glantz.css
+++ b/glantz.css
@@ -1,4 +1,12 @@
+<html>
+<head>
+<style>
 body {
   background-color: #ffffe0;
 }
-
+#aboutme-h1  {
+    <font color="green">
+}
+</style>
+</head>
+</html>
