--- a/glantz.css
+++ b/glantz.css
@@ -1,12 +1,6 @@
-<html>
-<head>
-<style>
 body {
   background-color: #ffffe0;
 }
-#aboutme-h1  {
-    <font color="green">
+#button-table {
+  width:800px;
 }
-</style>
-</head>
-</html>
