--- a/glantz.css
+++ b/glantz.css
@@ -25,7 +25,7 @@ body {
   background-color: #f6cf86;
 }
 #appspage {
-  bakcground-color: #f57542;
+  background-color: #f57542;
 }
 #pic-one {
   float: left;    
